add RabbitMQ module and configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,13 @@ services:
     container_name: zipkin
     ports:
       - "9411:9411"
-#    networks:
-#      - spring
+
+  rabbitmq:
+    image: rabbitmq:3.9-management-alpine
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
 
 networks:
   postgres:
