--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -19,7 +19,8 @@ spring:
 
   zipkin:
     base-url: http://localhost:9411
-
+  rabbitmq:
+    addresses: localhost:5672
 
 eureka:
   client:
@@ -27,3 +28,12 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+
+rabbitmq:
+  exchanges:
+    internal: internal.exchange
+  queues:
+    notification:
+      notification.queue
+  routing-keys:
+    internal-notification: internal.notification.routing-key
