--- a/eurika-server/pom.xml
+++ b/eurika-server/pom.xml
@@ -6,7 +6,31 @@
         <artifactId>MicroservicesAmigosCode</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>eurika-server</artifactId>
+    <artifactId>eureka-server</artifactId>
+    <packaging>jar</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>build-docker-image</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
