--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -5,10 +5,32 @@
         <groupId>org.study</groupId>
         <artifactId>MicroservicesAmigosCode</artifactId>
         <version>1.0-SNAPSHOT</version>
-
     </parent>
-
     <artifactId>fraud</artifactId>
+    <packaging>jar</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>build-docker-image</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
